--- a/src/app/features/platform/admin/profile/profile.component.html
+++ b/src/app/features/platform/admin/profile/profile.component.html
@@ -1,1 +1,36 @@
-<p>profile works!</p>
+<div class="flex h-screen bg-gray-100 ">
+    <!-- Profile Content -->
+    <div class="flex-1 p-8 flex flex-col lg:flex-row justify-center items-center space-y-8 lg:space-y-0 lg:space-x-8">
+      
+      <!-- User Data Form -->
+      <div class="w-full lg:w-1/2 bg-white p-6 rounded-lg shadow-md mb-20">
+        <h4 class="text-2xl font-bold text-gray-700 mb-6 text-center">Información Personal</h4>
+        <div class="space-y-6">
+          <div class="flex flex-col">
+            <label for="name" class="text-gray-700 font-semibold">Nombres</label>
+            <input id="name" type="text" value="Cocha Molina" class="p-3 border border-gray-300 rounded-md w-full">
+          </div>
+          <div class="flex flex-col">
+            <label for="surname" class="text-gray-700 font-semibold">Apellidos</label>
+            <input id="surname" type="text" value="" class="p-3 border border-gray-300 rounded-md w-full">
+          </div>
+          <div class="flex flex-col">
+            <label for="email" class="text-gray-700 font-semibold">Correo Electrónico</label>
+            <input id="email" type="email" value="" class="p-3 border border-gray-300 rounded-md w-full">
+          </div>
+          <div class="flex flex-col">
+            <label for="password" class="text-gray-700 font-semibold">Contraseña</label>
+            <input id="password" type="password" value="********" class="p-3 border border-gray-300 rounded-md w-full">
+          </div>
+          <button class="w-full mt-4 px-4 py-2 bg-green-500 text-white rounded-md hover:bg-green-600">Guardar Cambios</button>
+        </div>
+      </div>
+  
+      <!-- Profile Picture and Edit Button -->
+      <div class="w-full lg:w-1/4 flex flex-col items-center mb-20">
+        <img src="https://via.placeholder.com/200" alt="Profile Picture" class="rounded-lg shadow-md w-48 h-48 object-cover">
+        <button class="mt-4 px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600">Cambiar Foto de Perfil</button>
+      </div>
+    </div>
+  </div>
+  
